# Gosh-Notepad-Clone

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build-flatpak.yml  build-linux-arm.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
flatpak/: com.goshitsarch.notepad.metainfo.xml  com.goshitsarch.notepad.yml
frontend/: index.html  vite.config.mjs
frontend/src/: App.svelte  main.js
frontend/src/lib/: notepad.js
frontend/src/styles/: main.css
scripts/: sign-macos.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/js/: app.js
src/main/: fileOperations.js  main.js  menu.js
src/preload/: preload.js
src/renderer/: index.html
src/renderer/js/: app.js
