[package]
name = "gosh-notepad"
version = "2.0.1"
description = "Windows 95/98 Notepad Clone"
authors = ["Goshitsarch"]
license = "AGPL-3.0"
repository = "https://github.com/goshitsarch-eng/Gosh-Notepad-Clone"
edition = "2021"

[lib]
name = "gosh_notepad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
